[FIX] text wrapping to break at words and not characters in them [FIX] Resize handles need to be bigger

--- a/jquery.sheet.css
+++ b/jquery.sheet.css
@@ -195,7 +195,7 @@
 	font-size: 1em;
 	-moz-border-radius: 0px 0px 0px 0px;
 	overflow: hidden;
-	text-overflow: ellipsis ! important;
+	text-overflow: ellipsis;
 	white-space: nowrap;
 }
 
@@ -236,6 +236,7 @@
 
 .jSBarTopParent .jSBarController .ui-resizable-handle {
 	height: 16px;
+	width: 10px;
 }
 .jSBarLeft .jSBarController {
 	width: 0px;
@@ -248,6 +249,7 @@
 .jSBarLeft .jSBarController .ui-resizable-handle {
 	width: 16px;
 	display: inline ! important;
+	height: 10px;
 }
 .jSBarHandleFreezeTop
 {
@@ -364,6 +366,9 @@
 { display: none; }
 .styleWrap
 {
-	word-wrap: break-word ! important;
-	white-space: normal ! important;
+	white-space: pre-wrap ! important;       /* css-3 */
+	white-space: -moz-pre-wrap ! important;  /* Mozilla, since 1999 */
+	white-space: -pre-wrap ! important;      /* Opera 4-6 */
+	white-space: -o-pre-wrap ! important;    /* Opera 7 */
+	word-wrap: break-word;
 }
